# claude-notifs

./: .gitignore  README.md  pyproject.toml
src/claude_notifs/: constants.py  hook.py  menubar.py  status.py
