[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-notifs"
version = "0.1.0"
description = "macOS menu bar status widget for Claude Code"
requires-python = ">=3.13"
dependencies = [
    "rumps>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_notifs"]
